Create detail_movie_fragment.xml and implement binding of textual data to this layout.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="space_small">8dp</dimen>
     <dimen name="space_normal">16dp</dimen>
+    <dimen name="space_normal_x2">32dp</dimen>
     <!-- item of RecyclerView of movies list dimensions -->
     <dimen name="image_size">80dp</dimen>
 
