--- a/app/src/main/res/layout/detail_movie_fragment.xml
+++ b/app/src/main/res/layout/detail_movie_fragment.xml
@@ -1,13 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.detailMovie.DetailMovieFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/space_normal"
+        android:paddingBottom="@dimen/space_normal_x2">
 
-</FrameLayout>
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/detailMovie_guideline1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_percent="0.05" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/detailMovie_backdrop"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@string/app_name"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/detailMovie_guideline1"
+            app:layout_constraintWidth_percent="0.8"
+            tools:src="@drawable/img_not_found_square" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_title"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:layout_marginTop="@dimen/space_normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_backdrop"
+            tools:text="Title of movie" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_overview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_normal"
+            android:layout_marginTop="@dimen/space_normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_title"
+            tools:text="Very long text, briefly... Lorem ipsum postume agate blisti dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua." />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/detailMovie_poster"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_small"
+            android:layout_marginTop="@dimen/space_normal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_overview"
+            tools:src="@drawable/img_not_found_square" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/detailMovie_guideline2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            app:layout_constraintGuide_percent="0.1" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_releaseDate_title"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_small"
+            android:text="@string/release_date"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/detailMovie_poster" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_releaseDate_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_small"
+            android:text="@string/release_date"
+            app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_releaseDate_title" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_rating_title"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_small"
+            android:layout_marginTop="@dimen/space_small"
+            android:text="@string/rating"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_releaseDate_body" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_rating_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_small"
+            app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_rating_title"
+            tools:text="@string/rating" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_budget_title"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_small"
+            android:layout_marginTop="@dimen/space_small"
+            android:text="@string/budget"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_rating_body" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_budget_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_small"
+            app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_budget_title"
+            tools:text="@string/budget" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_original_language_title"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_small"
+            android:layout_marginTop="@dimen/space_small"
+            android:text="@string/original_language"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_budget_body" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_original_language_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_small"
+            app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_original_language_title"
+            tools:text="@string/original_language" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_original_title"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_small"
+            android:layout_marginTop="@dimen/space_small"
+            android:text="@string/original_title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_original_language_body" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_original_title_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_small"
+            app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_original_title"
+            tools:text="@string/original_title" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_company_title"
+            style="@style/TextAppearance.AppCompat.Body1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/space_small"
+            android:layout_marginTop="@dimen/space_small"
+            android:text="@string/company"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_original_title_body" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/detailMovie_company_body"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_small"
+            app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline2"
+            app:layout_constraintTop_toBottomOf="@+id/detailMovie_company_title"
+            tools:text="@string/company" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
