--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -5,7 +5,7 @@
     android:id="@+id/frg_listMovies_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.MoviesListFragment">
+    tools:context=".ui.moviesList.MoviesListFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/listMoviesRV"
