--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,9 +7,12 @@
     <dimen name="image_size">80dp</dimen>
 
     <!-- test sizes -->
-    <dimen name="text_small">12sp</dimen>
     <dimen name="text_title">20sp</dimen>
+    <dimen name="text_title_small">18sp</dimen>
     <dimen name="text_subtitle">14sp</dimen>
+    <dimen name="text_subtitle_small">12sp</dimen>
     <dimen name="text_body1">14sp</dimen>
+    <dimen name="text_body1_small">12sp</dimen>
     <dimen name="text_body2">14sp</dimen>
+    <dimen name="text_body2_small">12sp</dimen>
 </resources>
