--- a/presentation/src/main/res/layout/detail_movie_fragment.xml
+++ b/presentation/src/main/res/layout/detail_movie_fragment.xml
@@ -2,6 +2,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/purple_700"
     android:id="@+id/detailMovie_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -39,6 +40,7 @@
             android:layout_marginHorizontal="@dimen/space_normal"
             android:layout_marginTop="@dimen/space_normal"
             android:textSize="@dimen/text_title"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_backdrop"
@@ -51,6 +53,7 @@
             android:layout_marginHorizontal="@dimen/space_normal"
             android:layout_marginTop="@dimen/space_normal"
             android:textSize="@dimen/text_body1"
+            android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_title"
@@ -83,6 +86,7 @@
             android:layout_marginHorizontal="@dimen/space_small"
             android:text="@string/release_date"
             android:textSize="@dimen/text_subtitle"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/detailMovie_poster" />
 
@@ -93,6 +97,7 @@
             android:layout_marginTop="@dimen/space_small"
             android:text="@string/release_date"
             android:textSize="@dimen/text_body1"
+            android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline1"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_releaseDate_title" />
 
@@ -105,6 +110,7 @@
             android:layout_marginTop="@dimen/space_small"
             android:text="@string/rating"
             android:textSize="@dimen/text_subtitle"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_releaseDate_body" />
 
@@ -114,6 +120,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_small"
             android:textSize="@dimen/text_body1"
+            android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline1"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_rating_title"
             tools:text="@string/rating" />
@@ -127,6 +134,7 @@
             android:layout_marginTop="@dimen/space_small"
             android:text="@string/budget"
             android:textSize="@dimen/text_subtitle"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_rating_body" />
 
@@ -136,6 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_small"
             android:textSize="@dimen/text_body1"
+            android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline1"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_budget_title"
             tools:text="@string/budget" />
@@ -149,6 +158,7 @@
             android:layout_marginTop="@dimen/space_small"
             android:text="@string/original_title"
             android:textSize="@dimen/text_subtitle"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_budget_body" />
 
@@ -158,6 +168,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_small"
             android:textSize="@dimen/text_body1"
+            android:textColor="@color/white"
             app:layout_constraintHorizontal_bias="0.0"
             android:maxLines="2"
             app:layout_constraintEnd_toStartOf="@+id/detailMovie_guideline2"
@@ -174,6 +185,7 @@
             android:layout_marginTop="@dimen/space_small"
             android:text="@string/company"
             android:textSize="@dimen/text_subtitle"
+            android:textColor="@color/white"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_original_title_body" />
 
@@ -183,6 +195,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/space_small"
             android:textSize="@dimen/text_body1"
+            android:textColor="@color/white"
             app:layout_constraintStart_toEndOf="@+id/detailMovie_guideline1"
             app:layout_constraintTop_toBottomOf="@+id/detailMovie_company_title"
             tools:text="@string/company" />
