--- a/presentation/src/main/res/layout/main_fragment.xml
+++ b/presentation/src/main/res/layout/main_fragment.xml
@@ -15,6 +15,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:paddingVertical="@dimen/space_small"
+        android:background="@color/purple_700"
         tools:listitem="@layout/item_movie"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
