--- a/presentation/src/main/res/layout/main_fragment.xml
+++ b/presentation/src/main/res/layout/main_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frg_listMovies_container"
     android:layout_width="match_parent"
@@ -11,12 +10,8 @@
         android:id="@+id/listMoviesRV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         android:paddingVertical="@dimen/space_small"
         android:background="@color/purple_700"
         tools:listitem="@layout/item_movie"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</FrameLayout>
